# video-splitter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/rules/: changelog.md
.claude/skills/summarize-video/: SKILL.md
.claude/skills/summarize-video/references/: cli-options.md  setup.md  troubleshooting.md
.claude/skills/summarize-video/scripts/: download_model.py
.github/workflows/: release.yml
mcp/: pyproject.toml  server.py
src/: frames.rs  main.rs  manifest.rs  scene.rs  search.rs  silence.rs  split.rs  transcribe.rs
tasks/: mcp-roadmap.md  todo.md
