[package]
name = "video-splitter"
version = "0.1.1"
edition = "2021"
description = "CLI tool to split videos at silence boundaries with built-in transcription (whisper-rs) and MCP server support"
license = "MIT"
repository = "https://github.com/7sb-yaboo/video-splitter"

[[bin]]
name = "video-splitter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whisper-rs = "0.15"

[dev-dependencies]
tempfile = "3"
