[project]
name = "video-splitter-mcp"
version = "0.1.0"
description = "MCP server for video-splitter: split, transcribe, and extract key frames from videos"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
video-splitter-mcp = "server:main"
